[add] 内存分配与回收策略实例 && chapter 4.